# RAG_FROM_SCRATCH

./: .gitignore  README.md  checkpoints.db  create_tool_agent.py  lcel.txt  lcel_demo.py  pyproject.toml  react_agent.py  requirements.txt  tool_demo.py
archive/: README.md  conditional_workflow.py  create_tool_agent.py  langchain_rag.py  lcel_chain.py  react_agent.py  test.py  testing.py  workflow_basics.py
evals/: eval_routing.py  golden_dataset.json
src/: app.py  ingest.py  rag_graph.py
