[project]
name = "embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.17.0",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.2",
    "langsmith>=0.8.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
]
